# Magnets.moe

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
common/: Cargo.toml
common/src/: config.rs  env.rs  format.rs  lib.rs  pg.rs  season.rs  time.rs
dump/: Cargo.toml
dump/src/: dump.rs  load.rs  main.rs  pg.rs  schema.rs
font/: generate.py
processor/: Cargo.toml  config.tpl.toml
processor/src/: allocator.rs  anilist.rs  anilist_client.rs  config.rs  db_state.rs  diff.rs  heap.rs  http.rs  lib.rs  matcher.rs  nyaa.rs  scheduled.rs  show_db.rs  show_db_old.rs  sleeper.rs  state.rs  strings.rs  title_analyzer.rs  trie.rs
processor/src/anilist/: client.rs  mod.rs  schedule.rs  shows.rs
site/: Cargo.toml  config.tpl.toml
site/src/: cache.rs  config.rs  db.rs  faq.rs  index.rs  main.rs  new.rs  schedule.rs  season.rs  show.rs  show_list.rs  shows.rs  state.rs  text.rs  torrent.rs  torrent_list.rs  unmatched.rs
site/static/: css.css  show_list.js
site/templates/: base.html  faq.html  index.html  new.html  schedule.html  season.html  show.html  shows.html  shows_base.html  torrent.html  torrent_list.html  unmatched.html
sql/: init.sql
tests/: Cargo.toml
tests/src/: lib.rs
