[package]
name = "common"
version = "0.1.0"
authors = ["Julian Orth <ju.orth@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
chrono = "0.4.19"
tokio = { version = "0.2.22", features = ["rt-core", "sync", "time", "macros"] }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4", "with-serde_json-1"] }
log = "0.4.11"
async-trait = "0.1.42"
env_logger = "0.8.2"
futures = { version = "0.3.8", features = ["async-await"] }
rustls = "0.18.0"
rustls-native-certs = "0.4"
lazy_static = "1.4.0"
serde = "1.0.118"
tokio-postgres-rustls = { git = "https://github.com/mahkoh/tokio-postgres-rustls", branch = "uds" }
toml = { git = "https://github.com/mahkoh/toml-rs.git", branch = "alt-error" }
