[package]
name = "dump"
version = "0.1.0"
authors = ["Julian Orth <ju.orth@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
common = { path = "../common" }
anyhow = "1.0.35"
tokio = { version = "0.2.22", features = ["rt-core", "sync", "time", "macros"] }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = "0.1.3"
memchr = "2.3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.60"
hex = "0.4.2"
bytes = "0.5"
walkdir = "2.3.1"
futures = "0.3.8"
