[package]
name = "processor"
version = "0.1.0"
authors = ["Julian Orth <ju.orth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "processor"
path = "bin/processor.rs"

[[bin]]
name = "diff"
path = "bin/diff.rs"

[dependencies]
scraper = "0.12"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tokio = { version = "0.2.22", features = ["rt-core", "sync", "time", "macros"] }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
lazy_static = "1.4.0"
regex = "1.4.2"
unicode-normalization = "0.1.15"
html5ever = "0.25.1"
selectors = "0.22"
url = "2.2.0"
hex = "0.4.2"
anyhow = "1.0.34"
rust_decimal = "1.8.1"
common = { path = "../common" }
itertools = "0.9.0"
futures = { version = "0.3.8", features = ["async-await"] }
log = "0.4.11"
env_logger = "0.8.2"
smallvec = "1.5.0"
num-traits = "0.2.14"
libc = "0.2.80"
isnt = "0.1.0"
paste = "1.0.3"
async-trait = "0.1.42"
parse_duration = "2.1.0"

[dev-dependencies]
testcontainers = "0.11.0"
