[package]
name = "site"
version = "0.1.0"
authors = ["Julian Orth <ju.orth@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.4.0"
tokio-postgres = {version = "0.5", features = ["with-serde_json-1", "with-chrono-0_4"]}
unicode-normalization = "0.1.15"
tokio = {version = "0.2", features = ["sync"]}
serde = "1"
serde_json = "1.0.59"
chrono = "0.4.19"
anyhow = "1.0.34"
log = "0.4.11"
env_logger = "0.8.2"
thiserror = "1.0.22"
bytesize = "1.0.1"
askama = "0.10.5"
percent-encoding = "2.1.0"
common = { path = "../common" }
futures = "0.3.8"
lazy_static = "1.4.0"
itertools = "0.9.0"
async-trait = "0.1.42"
isnt = "0.1.0"
