[package]
name = "tests"
version = "0.1.0"
authors = ["Julian Orth <ju.orth@gmail.com>"]
edition = "2018"

[dependencies]
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio = { version = "0.2.22", features = ["rt-core", "sync", "time", "macros"] }
testcontainers = "0.11.0"
anyhow = "1.0.34"
common = { path = "../common" }
log = "0.4.11"
